<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.rumofuture.nemolite.view.fragment.NemoSignUpFragment">

    <TextView
        android:id="@+id/sign_up_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/prompt_sign_up_welcome"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/nemo_text_title_size"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/author_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/nemo_text_standard_size"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_mobile_phone_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user_mobile_phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/nemo_text_standard_size"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/nemo_text_standard_size"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start">

            <EditText
                android:id="@+id/sms_code_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nemo_sms_code"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/nemo_text_standard_size"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/sms_code_request_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/action_get_sms_code"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/nemo_text_standard_size"/>
    </LinearLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="@dimen/activity_vertical_middle_margin"
        android:background="@drawable/main_button_shape"
        android:text="@string/action_sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/nemo_button_text_size"/>
</LinearLayout>
