<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rumofuture.nemolite.view.fragment.NemoMainWelcomeFragment">

    <ImageView
        android:id="@+id/app_logo_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_color_lens_black_fab"
        app:layout_constraintBottom_toTopOf="@+id/app_name_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/app_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_light_margin"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/app_theme_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/app_theme_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_theme"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/nemo_text_big_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginEnd="@dimen/activity_horizontal_light_margin"
        android:layout_marginTop="32dp"
        android:background="@drawable/welcome_button_shape"
        android:text="@string/action_sign_up"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/nemo_button_text_size"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/app_theme_view"/>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="@dimen/activity_horizontal_light_margin"
        android:layout_marginTop="32dp"
        android:background="@drawable/welcome_button_shape"
        android:text="@string/action_log_in"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/nemo_button_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/app_theme_view"/>
</android.support.constraint.ConstraintLayout>
