<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context="com.rumofuture.nemolite.view.fragment.MyPasswordUpdateFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/old_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_old_user_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/nemo_text_standard_size"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/new_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_new_user_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/nemo_text_standard_size"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/password_update_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="@dimen/activity_vertical_middle_margin"
        android:background="@drawable/main_button_shape"
        android:text="@string/action_update_user_password"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/nemo_button_text_size"/>
</LinearLayout>
