<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_light_margin"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_middle_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_middle_margin"
        android:layout_marginStart="@dimen/activity_horizontal_middle_margin"
        android:layout_marginTop="@dimen/activity_vertical_middle_margin"
        app:cardCornerRadius="@dimen/card_elevation"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/book_cover_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/background"
                    android:contentDescription="@string/prompt_book_cover"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_middle_margin"/>

            <TextView
                android:id="@+id/book_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/prompt_book_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/nemo_text_standard_size"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_light_margin"/>

            <TextView
                android:id="@+id/book_introduction_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing_extra"
                android:text="@string/prompt_book_introduction"
                android:textSize="@dimen/nemo_text_small_size"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_middle_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@mipmap/ic_camera_silver_fab"
                    android:contentDescription="@string/prompt_book_style"/>

                <TextView
                    android:id="@+id/book_style_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_min_margin"
                    android:textColor="@color/colorSilver"
                    android:textSize="@dimen/nemo_text_small_size"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorSilver"/>
</LinearLayout>